[metadata]
name = plot-markdown
version = attr: plot.__version__
description = bring plotting to markdown
long_description = file: README.mkd
author = Lucas Bourneuf
author_email = lucas.bourneuf@laposte.net
url = https://github.com/aluriak/powergrasp
license = GPL
keywords = Markdown, plot, include, plugin, extension
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Topic :: Software Development :: Documentation
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Filters
    Topic :: Text Processing :: Markup :: HTM

[options]
zip_safe = False
include_package_data = True
packages = find:

[zest.releaser]
create-wheel = yes
python-file-with-version = plot.py

[options.packages.find]
exclude =
    test
