[metadata]
name = genhtml-markdown
version = attr: genhtml.__version__
description = bring python to markdown to generate HTML inline
long_description = file: README.mkd
author = Lucas Bourneuf
author_email = lucas.bourneuf@laposte.net
url = https://github.com/aluriak/genhtml-markdown
license = GPL
keywords = Markdown, plot, include, plugin, extension
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:

[zest.releaser]
create-wheel = yes
python-file-with-version = genhtml.py

[options.packages.find]
exclude =
    test
